[gd_scene load_steps=8 format=3 uid="uid://dm1a0mo1nhmj4"]

[ext_resource type="Script" path="res://Escenas/Escort2D.gd" id="1_icq7n"]
[ext_resource type="Texture2D" uid="uid://b6bpvknki0ahw" path="res://imagenes/Escort.png" id="2_fwq04"]
[ext_resource type="AudioStream" uid="uid://bqf2yhtpe5065" path="res://musica/efectos de sonido/editNICE.mp3" id="3_m5rr4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_o0js7"]
radius = 5.34305
height = 22.8294

[sub_resource type="Animation" id="Animation_hgdb3"]
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_mqmw0"]
resource_name = "monea"
length = 1.34
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 6, 5, 4, 3, 2, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3jm7r"]
_data = {
"RESET": SubResource("Animation_hgdb3"),
"monea": SubResource("Animation_mqmw0")
}

[node name="Escort" type="Node2D"]

[node name="Escort2D" type="Area2D" parent="."]
script = ExtResource("1_icq7n")

[node name="Sprite2D" type="Sprite2D" parent="Escort2D"]
position = Vector2(-13, -3)
scale = Vector2(0.330064, 0.320265)
texture = ExtResource("2_fwq04")
hframes = 4
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Escort2D"]
scale = Vector2(8.235, 8.235)
shape = SubResource("CapsuleShape2D_o0js7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Escort2D"]
libraries = {
"": SubResource("AnimationLibrary_3jm7r")
}
autoplay = "monea"

[node name="Timer" type="Timer" parent="Escort2D"]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Escort2D"]
stream = ExtResource("3_m5rr4")

[connection signal="body_entered" from="Escort2D" to="Escort2D" method="_on_body_entered"]
[connection signal="timeout" from="Escort2D/Timer" to="Escort2D" method="_on_timer_timeout"]
